--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -9,21 +9,21 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 CONTACT US
+            .h4 CONTACTANOS
             ul
               li
-                a(href='index.html') Home
+                a(href='index.html') Inicio
               li
                 span -
               li
-                span Contact
+                span Contacto
   // PAGE CONTENT START
   section.page-content.contact-wrapper
     .container.page-content-wrapper
       .row.contact-holder
         .col-lg-4.col-md-4.col-sm-12.col-xs-12.contact-detail.col-md-push-8
           .heding-wrapper.text-left.contact-page-ops
-            span.heading-spn Find Us
+            span.heading-spn Contacto:
             span.spliter
           .detail-holder.table
             .table-row
@@ -33,7 +33,7 @@ block view
                 .clearfix
                 span.small-spliter.animate-in.spliter
               .right-detail.table-cell.align-middle
-                span  Los Angeles, 1234, ipsum set emt Tehun Street 008 road 234-5678 
+                span Cal.Coronel Miguel Rios N°1794 - Urb:Cata, Lima, Lima. 
           .detail-holder.table
             .table-row
               .left-detail.table-cell.align-middle
@@ -43,9 +43,9 @@ block view
                 span.small-spliter.animate-in.spliter
               .right-detail.table-cell.align-middle
                 span
-                  a(href='mailto:info@domain.com') info@domain.com
+                  a(href='mailto:info@ingenieriamvd.com') info@ingenieriamvd.com
                   br
-                  a(href='mailto:personal@mail.com') personal@mail.com
+                  a(href='mailto:info@ingenieriamvd.com') info@ingenieriamvd.com
           .detail-holder.table
             .table-row
               .left-detail.table-cell.align-middle
@@ -55,9 +55,9 @@ block view
                 span.small-spliter.animate-in.spliter
               .right-detail.table-cell.align-middle
                 span
-                  | (800) 9235 3658 32
+                  | (+51) 961 950 018
                   br
-                  | 								(800) 9235 3658 32
+                  | 								(01)  528 4005
           // MAP SECTION START
           section.map-container
             #map-canvas
@@ -66,14 +66,15 @@ block view
           .row
             .col-md-9
               p
-                | Feel free to talk to our online representative at any time you please using our Live Chat system on our website or one of the below instant messaging programs.
-                | (24/7 Support!)  Phone General Inquiries: 1-888-123-4567-8900
+                | Para obtener más información acerca de nuestros servicios, consultas de marketing y ventas, por favor deja un mensaje y te responderemos  tan pronto como sea posible.
+                | (01) 52 84005
+
           form.page-contact-form(action='', method='post')
-            label Name *
+            label Nombres y Apellidos *
             input.name(type='text', name='name', required='')
             label Email *
             input.email(type='email', name='email', required='')
-            label Message *
+            label Mensaje *
             textarea.message(name='message', required='')
-            input.submit.btn.light.p10-50.border-1(type='submit', value='SUBMIT')
+            input.submit.btn.light.p10-50.border-1(type='submit', value='Enviar')
   // PAGE CONTENT END
