--- a/views/pages/team.pug
+++ b/views/pages/team.pug
@@ -7,225 +7,172 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 OUR TEAM
+            .h4 Nuestros Clientes
             ul
               li
-                a(href='index.html') Home
+                a(href='index.html') Inicio
               li
                 span -
               li
-                span Team
+                span Empresas
   // TEAM SECTION START
   section.page-content.section-wrapper.pt0
     .container.page-content-wrapper
       .row
         .col-lg-12.heding-wrapper.text-center
-          span LEADERS
-          h2 Founders & Seniors
+
+          h2 Nuestros Clientes
           span.spliter
       .row.text-center
         .col-lg-3.col-sm-6
           .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              img.img-responsive(src='assets/images/team-1.jpg', alt='team-img')
-            .name L. Frank Baum
+              img.img-responsive(src='assets/images/clientes/GLORIA.png', alt='team-img')
+            .name GRUPO GLORIA
             .position Co-Founde
             span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
+
         .col-lg-3.col-sm-6
           .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              img.img-responsive(src='assets/images/team-2.jpg', alt='team-img')
+              img.img-responsive(src='assets/images/clientes/ABENGOA.png', alt='team-img')
+            .name GRUPO GLORIA
+            .position Co-Founde
+            span.spliter
+         
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/BEFESA.png', alt='team-img')
+            .name GRUPO GLORIA
+            .position Co-Founde
+            span.spliter
+         
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/GOBIERNO_HUANUCO.jpg', alt='team-img')
             .name Edgar Rice Burroughs
             .position Graphic Designer
             span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
         .col-lg-3.col-sm-6
           .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              img.img-responsive(src='assets/images/team-3.jpg', alt='team-img')
-            .name Lewis Carroll
-            .position Photographer
+              img.img-responsive(src='assets/images/clientes/ABEIMA.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
             span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
         .col-lg-3.col-sm-6
           .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              img.img-responsive(src='assets/images/team-4.jpg', alt='team-img')
-            .name Jules Verne
-            .position SEO Expert
+              img.img-responsive(src='assets/images/clientes/NESTLE.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
             span.spliter
-            .clearfix
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              i.fa.fa-facebook
+              img.img-responsive(src='assets/images/clientes/SEDAPAL.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              i.fa.fa-twitter
+              img.img-responsive(src='assets/images/clientes/SEDA_LORETO.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              i.fa.fa-pinterest
+              img.img-responsive(src='assets/images/clientes/SEDA_HUANUCO.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
             a(href='#')
-              i.fa.fa-instagram
+              img.img-responsive(src='assets/images/clientes/SAN_LORENZO.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/QROMA.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/PEPSICO.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/MYCOM.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/IBERMATICA.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/HAYDUK.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/GYPLAC.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/GERFOR.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/ETERNIT.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/CPP.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+            
+        .col-lg-3.col-sm-6
+          .team-holder.text-center.scale-big.animate-in.team-box
+            a(href='#')
+              img.img-responsive(src='assets/images/clientes/CHIMU.PNG', alt='team-img')
+            .name Edgar Rice Burroughs
+            .position Graphic Designer
+            span.spliter
+          
+        
   // TEAM SECTION END
   // TEAM SECTION START
-  section.page-content.section-wrapper.gray-background.p0
-    .container.page-content-wrapper
-      .row
-        .col-lg-12.heding-wrapper.text-center
-          span SUPPORTS/ADMIN/DEVELOPERS
-          h2 Meet Our team
-          span.spliter
-      .row.team-wrapper.text-center
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-1.jpg', alt='team-img')
-            .name L. Frank Baum
-            .position Co-Founde
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-2.jpg', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-3.jpg', alt='team-img')
-            .name Lewis Carroll
-            .position Photographer
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-4.jpg', alt='team-img')
-            .name Jules Verne
-            .position SEO Expert
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-1.jpg', alt='team-img')
-            .name L. Frank Baum
-            .position Co-Founde
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-2.jpg', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-3.jpg', alt='team-img')
-            .name Lewis Carroll
-            .position Photographer
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/team-4.jpg', alt='team-img')
-            .name Jules Verne
-            .position SEO Expert
-            span.spliter
-            .clearfix
-            a(href='#')
-              i.fa.fa-facebook
-            a(href='#')
-              i.fa.fa-twitter
-            a(href='#')
-              i.fa.fa-pinterest
-            a(href='#')
-              i.fa.fa-instagram
   // TEAM SECTION END
   // TESTIMONIALS SECTION START
   section
