--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -4,9 +4,9 @@ footer
     .row
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
         a.footer-logo(href='index.html')
-          img(src='assets/images/footer-logo-red.png', alt='logo-img')
+          img(src='assets/images/footer-logo-orange.PNG', falt='logo-img')
         div
-          | Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+          | Somos una empresa peruana fundada en el año 2009, dedicandose al desarrollo y ejecucion de proyector de Ingenieria Electrica, Instalacion y Puesta en Servicio de Sistemas de Electricidad Industrial en Baja y Media Tension, Automatizacion de Procesos para la Instrumentacion de Control y Sistemas de Telecomunicaciones para la Industria en General.
         ul
           li
             a(href='#')
@@ -27,20 +27,20 @@ footer
             a(href='#')
               i.fa.fa-flickr
       .col-lg-3.col-md-3.col-sm-6.col-footer.footer-nav.first-nav
-        .h3 Additional Links
+        .h3 Enlaces Adicionales
         ul
           li
-            a(href='index.html') HOME
+            a(href='index.html') Inicio
           li
-            a(href='about.html') ABOUT
+            a(href='about.html') Nosotros
           li
-            a(href='services.html') SERVICES
+            a(href='team.html') Nuestros Clientes
           li
-            a(href='portfolio.html') PORTFOLIO
+            a(href='portfolio.html') Portafolio
           li
-            a(href='team.html') TEAM
+            a(href='services.html') Soluciones
           li
-            a(href='blog.html') BLOG
+            a(href='contact.html') Contacto
       .col-lg-3.col-md-3.col-sm-6.col-footer.footer-nav
         .h3 Blog
         ul
@@ -57,26 +57,26 @@ footer
           li
             a(href='blog-detail-rightbar.html') Blog Detail Page With Right Sidebar
       .col-lg-3.col-md-3.col-sm-6.col-footer
-        .h3 Photo Stream
+        .h3 Galeria
         ul.footer-thumb
           li
             a(href='#')
-              img(src='assets/images/photo-stream-1.jpg', alt='thumb')
+              img(src='assets/images/galeria/1.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/photo-stream-2.jpg', alt='thumb')
+              img(src='assets/images/galeria/2.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/photo-stream-3.jpg', alt='thumb')
+              img(src='assets/images/galeria/3.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/photo-stream-4.jpg', alt='thumb')
+              img(src='assets/images/galeria/4.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/photo-stream-5.jpg', alt='thumb')
+              img(src='assets/images/galeria/5.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/photo-stream-6.jpg', alt='thumb')
+              img(src='assets/images/galeria/6.jpg', alt='thumb')
 // FOOTER END
 section.bottom-bar
   span
