--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -20,13 +20,8 @@ section.top-bar
       .col-lg-6.col-md-6.col-sm-6.col-xs-12.left-side
         ul
           li
-            a(href='#') about
-          li
-            a(href='#') features
-          li
-            a(href='#') contact
-          li
-            a(href='#') terms
+            a(href='#') Contacto: (01) 528-4005    |   info@ingenieriamvd.com
+
       .col-lg-6.col-md-6.col-sm-6.col-xs-12.right-side
         ul
           li
@@ -55,7 +50,7 @@ section.top-bar
       ul
         li
           a.btn-7(href='about')
-            span ABOUT
+            span Nosotros
         li
           a.btn-7(href='team')
             span TEAM
@@ -125,69 +120,39 @@ header
           ul
             li.wrap.active
               a.btn-7(href='index')
-                span HOME
+                span INICIO
             li.wrap
               a.btn-7(href='about')
-                span ABOUT
+                span NOSOTROS
             li.wrap
               a.btn-7(href='team')
-                span TEAM
+                span NUESTROS CLIENTES
             li.wrap
               a.btn-7(href='services')
                 span
-                  | SERVICES 
+                  | SOLUCIONES 
                   i.fa.fa-caret-down(aria-hidden='true')
               .sub
                 ul
                   li
-                    a(href='services-detail') Detailed
+                    a(href='services-detail') ELECTRICIDAD
+                    a(href='services-detail') CONTROL Y AUTOMATIZACION
+                    a(href='services-detail') TELECOMUNICACIONES
+                    a(href='services-detail') SANEAMIENTO
             li.wrap
               a.btn-7(href='portfolio')
                 span
-                  | PORTFOLIO 
+                  | PORTAFOLIO 
                   i.fa.fa-caret-down(aria-hidden='true')
               .sub
                 ul
                   li
-                    a(href='portfolio-detail') Detailed
+                    a(href='portfolio-detail') PROYECTO TINGO MARIA
                   li
-                    a(href='portfolio-detail') Detailed
-                  li
-                    a(href='portfolio-detail')
-                      | Detailed 
-                      i.fa.fa-caret-right(aria-hidden='true')
-                    .sub
-                      ul
-                        li
-                          a(href='portfolio-detail') Detailed
-                        li
-                          a(href='portfolio-detail') Detailed
-                        li
-                          a(href='portfolio-detail') Detailed
-                        li
-                          a(href='portfolio-detail') Detailed
-            li.wrap
-              a.btn-7(href='#')
-                span
-                  | BLOG 
-                  i.fa.fa-caret-down(aria-hidden='true')
-              .sub
-                ul
-                  li
-                    a(href='blog') Full Width
-                  li
-                    a(href='blog-with-leftbar') With Left Sidebar
-                  li
-                    a(href='blog-with-rightbar') With Right Sidebar
-                  li
-                    a(href='blog-detail') Detail Page
-                  li
-                    a(href='blog-detail-leftbar') Detail Page With Left Sidebar
-                  li
-                    a(href='blog-detail-rightbar') Detail Page With Right Sidebar
-            li.wrap
-              a.btn-7(href='price')
-                span PRICE
+                    a(href='portfolio-detail') PROYECTO SANEAMIENTO X
+              
+           
+
             li.wrap
               a.btn-7(href='contact')
                 span CONTACT
