--- a/views/partials/scripts.pug
+++ b/views/partials/scripts.pug
@@ -25,13 +25,13 @@ script.
   insertBefore.call(head, newElement, referenceElement);
   };
   var map = new google.maps.Map( document.getElementById( 'map-canvas' ), {
-  center: { lat: 44.5403, lng: -78.5463 },
+  center: { lat: -12.055586, lng: -77.065641 }, 
   scrollwheel: false,
-  zoom: 8
+  zoom: 15
   } );
   var locations = [
-  [ '1-19 Front St E, Lindsay, ON K9V 4R4, Canada', 44.5401, -78.5461, 4 ],
-  [ '2402 Indian River Line, Indian River, ON K0L 2B0, Canada', 44.3414, -78.1474, 3 ],
+  [ 'INGENIERIA mvd S.A.C.', -12.055586, -77.065641, 4 ],
+  
   ];
   var marker, i, infowindow = new google.maps.InfoWindow( );
   for ( i = 0; i < locations.length; i++ ) {
