--- a/views/pages/solutions-electricity.pug
+++ b/views/pages/solutions-electricity.pug
@@ -7,30 +7,40 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 MARKETING
+            .h4 ELECTRICIDAD
             ul
               li
-                a(href='index.html') Home
+                a(href='index.html') Servicios y
               li
-                span -
+                span 
               li
-                a(href='services.html') Services
+                a(href='services.html') soluciones
               li
-                span -
+                span 
               li
-                span Marketing
+                span en electricidad 
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
       .row
-        .col-sm-9.col-sm-push-3
+        .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/services-deteils-1.jpg', alt='services-detail-img')
+            img(src='assets/images/soluciones/electricidad.jpg', alt='services-detail-img')
           p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis fugit perferendis quam quis. Ab alias amet animi, dicta dol oremque dolorum explicabo, facere in incidunt inventore ipsam modi molestias nemo neque nisi non nulla omnis perspici atis quasi qui repellat reprehenderit temporibus vitae. Adipisci eveniet facere illum optio, quos rem rerum
+            | Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (celdas de media tension, transformadores y electro ductos). 
           p
-            | Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-          .row
+            | Distribucion en baja tension (tableros de suministro electrico y banco de condensadores).
+
+          ul
+            li 
+              | Sistemas de proteccion, puesta a tierra, sistemas de iluminacion y distribucion de redes electricas.
+            li  
+              | Fabricacion de tableros de fuerza.
+            li  
+              | Instalacion de bandejas y tendidos de cables enmedia y baja tension.
+            li  
+              | Mediciones y pruebas.
+          //.row
             .col-md-6
               img.img-responsive(src='assets/images/services-deteils-2.jpg', alt='services-detail-img')
               .h6 GREAT WORK PLANNIG
@@ -47,7 +57,7 @@ block view
                 | Lorem ipsum dolor sit amet, consectetur adipisicing elit. lis fugit perferendis quam quis. Ab alias amet animi, dicta dol oremque dolorum explicabo, facere in incidunt inventore ipsam modi molestias nemo neque nisi non
               p
                 | Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean
-        .col-sm-3.col-sm-pull-9
+        //.col-sm-3.col-sm-pull-9
           aside.widget.services-list
             .h5  Our Creative Services 
             span.spliter
