--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -6,7 +6,7 @@ footer
         a.footer-logo(href='index.html')
           img(src='assets/images/footer-logo-orange.PNG', falt='logo-img')
         div
-          | Somos una empresa peruana fundada en el año 2009, dedicandose al desarrollo y ejecucion de proyector de Ingenieria Electrica, Instalacion y Puesta en Servicio de Sistemas de Electricidad Industrial en Baja y Media Tension, Automatizacion de Procesos para la Instrumentacion de Control y Sistemas de Telecomunicaciones para la Industria en General.
+          | Nuestras Redes sociales:
         ul
           li
             a(href='#')
@@ -26,36 +26,27 @@ footer
           li
             a(href='#')
               i.fa.fa-flickr
+      .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
+       
+        div
+          | Somos una empresa peruana fundada en el año 2009, dedicandose al desarrollo y ejecucion de proyector de Ingenieria Electrica, Instalacion y Puesta en Servicio de Sistemas de Electricidad Industrial en Baja y Media Tension, Automatizacion de Procesos para la Instrumentacion de Control y Sistemas de Telecomunicaciones para la Industria en General.
+    
+    
       .col-lg-3.col-md-3.col-sm-6.col-footer.footer-nav.first-nav
         .h3 Enlaces Adicionales
         ul
           li
-            a(href='index.html') Inicio
+            a(href='index') Inicio
           li
-            a(href='about.html') Nosotros
+            a(href='about') Nosotros
           li
-            a(href='team.html') Nuestros Clientes
+            a(href='team') Nuestros Clientes
           li
-            a(href='portfolio.html') Portafolio
+            a(href='portfolio') Portafolio
           li
-            a(href='services.html') Soluciones
+            a(href='solutions-electricity') Soluciones
           li
-            a(href='contact.html') Contacto
-      .col-lg-3.col-md-3.col-sm-6.col-footer.footer-nav
-        .h3 Blog
-        ul
-          li
-            a(href='blog.html') Full Width
-          li
-            a(href='blog-with-leftbar.html') Blog With Left Sidebar
-          li
-            a(href='blog-with-rightbar.html') Blog With Right Sidebar
-          li
-            a(href='blog-detail.html') Blog Detail Page
-          li
-            a(href='blog-detail-leftbar.html') Blog Detail Page With Left Sidebar
-          li
-            a(href='blog-detail-rightbar.html') Blog Detail Page With Right Sidebar
+            a(href='contact') Contacto
       .col-lg-3.col-md-3.col-sm-6.col-footer
         .h3 Galeria
         ul.footer-thumb
@@ -80,8 +71,8 @@ footer
 // FOOTER END
 section.bottom-bar
   span
-    | All Rights Reserved. ©2017 One Solution - Multipurpose HTML Template. Design by 
-    a(href='mailto:denysthemes@gmail.com') DENYSTHEMES
+    | All Rights Reserved. ©2019 One Solution - Multipurpose HTML Template. Design by 
+    a(href='mailto:denysthemes@gmail.com') MVD
 a.scrollToTop(href='#')
   i.fa.fa-angle-up
 // SWITCH OF OPTIONS
