--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -135,10 +135,10 @@ header
               .sub
                 ul
                   li
-                    a(href='services-detail') ELECTRICIDAD
-                    a(href='services-detail') CONTROL Y AUTOMATIZACION
-                    a(href='services-detail') TELECOMUNICACIONES
-                    a(href='services-detail') SANEAMIENTO
+                    a(href='solutions-electricity') ELECTRICIDAD
+                    a(href='solutions-control') CONTROL Y AUTOMATIZACION
+                    a(href='solutions-teleco') TELECOMUNICACIONES
+                    a(href='solutions-sanea') SANEAMIENTO
             li.wrap
               a.btn-7(href='portfolio')
                 span
