feat: enlaces en index

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -49,22 +49,29 @@ section.top-bar
     nav.menu
       ul
         li
+          a.btn-7(href='index')
+            span Inicio
+        li
           a.btn-7(href='about')
             span Nosotros
         li
           a.btn-7(href='team')
-            span TEAM
+            span Clientes
         li.has-sub
-          a.btn-7(href='#')
+          a.btn-7(href='solutions-electricity')
             span
-              | SERVICES 
+              | Soluciones 
               i.fa.fa-caret-down(aria-hidden='true')
           .sub
             ul
               li
-                a(href='services') Page
+                a(href='solutions-electricity') Electricidad
               li
-                a(href='services-detail') Detailed
+                a(href='solutions-control') Control
+              li
+                a(href='solutions-teleco') Telecomunicaciones
+              li
+                a(href='solutions-sanea') Saneamiento
         li.has-sub
           a.btn-7(href='#')
             span
@@ -73,31 +80,10 @@ section.top-bar
           .sub
             ul
               li
-                a(href='portfolio') Page
+                a(href='portfolio') Tingo maria
               li
-                a(href='portfolio-detail') Detailed
-        li.has-sub
-          a.btn-7(href='#')
-            span
-              | BLOG 
-              i.fa.fa-caret-down(aria-hidden='true')
-          .sub
-            ul
-              li
-                a(href='blog') Full Width
-              li
-                a(href='blog-with-leftbar') With Left Sidebar
-              li
-                a(href='blog-with-rightbar') With Right Sidebar
-              li
-                a(href='blog-detail') Detail Page
-              li
-                a(href='blog-detail-leftbar') Detail Page With Left Sidebar
-              li
-                a(href='blog-detail-rightbar') Detail Page With Right Sidebar
-        li
-          a.btn-7(href='price')
-            span PRICE
+                a(href='portfolio-detail') otro
+       
         li
           a.btn-7(href='contact')
             span CONTACT
@@ -128,7 +114,7 @@ header
               a.btn-7(href='team')
                 span NUESTROS CLIENTES
             li.wrap
-              a.btn-7(href='services')
+              a.btn-7(href='solutions-electricity')
                 span
                   | SOLUCIONES 
                   i.fa.fa-caret-down(aria-hidden='true')
