--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -32,7 +32,7 @@ block view
                           
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='center', data-desktopportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6IkJsdXIiLCJkZWxheSI6MC41LCJvcGFjaXR5IjowLCJuMmJsdXIiOjEwfV19', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='0', data-desktopportraitfontsize='100', data-plugin='rendered')
                             .n2-ss-button-container.n2-ow.n2-font-13ab1dc09f48e0951d33464923c1b704-link.n2-ss-nowrap
-                              a.n2-style-6e7e81a6399b8836419afd9a49b7b3e2-heading.n2-ow(onclick='return false;', href='#')
+                              a.n2-style-6e7e81a6399b8836419afd9a49b7b3e2-heading.n2-ow(onclick='return false;', href='solutions-electricity')
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
@@ -57,7 +57,7 @@ block view
                               p.n2-font-e26f9fc0e4aacb0192eeeef97f36705d-paragraph.n2-ow Proyectos en Telecomunicaciones
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='left', data-desktopportraitselfalign='left', data-tabletportraitselfalign='center', data-mobileportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6IlJpZ2h0IGZhZGUiLCJkZWxheSI6MC41LCJvcGFjaXR5IjowLCJ4IjotNDAwfV19', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='0', data-desktopportraitfontsize='100', data-plugin='rendered')
                             .n2-ss-button-container.n2-ow.n2-font-2ef065763e81746d53de289375cb8532-link.n2-ss-nowrap
-                              a.n2-style-bfd939fac37975aea40e94c2b59db6f6-heading.n2-ow(onclick='return false;', href='#')
+                              a.n2-style-bfd939fac37975aea40e94c2b59db6f6-heading.n2-ow(onclick='return false;', href='solutions-teleco')
                                 span
                                   span Ver mas
                 
@@ -289,7 +289,7 @@ block view
                     .subtitle
                     .title ELECTRICIDAD
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='#') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-electricity') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
             img.img-responsive(src='assets/images/servicios/15.jpg', alt='service2')
@@ -300,7 +300,7 @@ block view
                     .subtitle
                     .title AUTOMATIZACION
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='#') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-control') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
             img.img-responsive(src='assets/images/servicios/12.jpg', alt='service3')
@@ -311,7 +311,7 @@ block view
                     .subtitle 
                     .title TELECOMUNICACIONES
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='#') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-teleco') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
             img.img-responsive(src='assets/images/servicios/14.jpg', alt='service4')
@@ -322,7 +322,7 @@ block view
                     .subtitle 
                     .title SANEAMIENTO
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='#') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-sanea') Ves Mas
         
   // SERVICES SECTION END
   // SPECILIZE SECTION START
